# defect_detection_yolo

./: .gitignore  GEMINI.md  README.md  analyse.md  convert_voc_to_yolo.py  pyproject.toml  train.py  val.py
datasets/: augment_dataset.py  convert_voc_to_yolo.py  data.yaml  visualize_aug.py
docs/: GC10-DET_Conversion_Guide.md  Initial_prompt.md  generate_yolo_diagram.py  hyperparameter_tuning_guide.md  param_tuning_guide.md  yolo26-architecture.excalidraw  yolo_result_analysis_guide.md
eval/: __init__.py  evaluation.py  plotting.py  thesis_helper.py
models/: __init__.py  losses.py  spdconv.py  yolo26l_spdconv_bifpn.yaml  yolo26m_spdconv_bifpn.yaml  yolo26n_spdconv_bifpn.yaml  yolo26n_spdconv_only.yaml  yolo26s_spdconv_bifpn.yaml  yolo_improved.yaml
models/modules/: __init__.py  common.py  fpn_pafpn.py  spdconv.py
tmp_aug_res/: results_tail.csv
utils/: __init__.py  export_model.py  grid_search.py  grid_search_09_s_aug.py  loss.py  metrics.py
