[project]
name = "defect_detection"
version = "0.1.0"
description = "Industrial Component Defect Detection based on YOLO26"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "onnx>=1.21.0",
    "onnxruntime>=1.25.0",
    "onnxslim>=0.1.91",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "seaborn>=0.13.2",
    "thop>=0.1.1.post2209072238",
    "ultralytics>=8.4.22",
]
